[package]
name = "nlcc"
version = "0.12.5"
edition = "2021"

[lib]
name = "nlcc"
path = "src/lib.rs"

[[bin]]
name = "nlcc"
path = "src/bin/driver/main.rs"

[features]
default = ["emission"]
lexer = []
parser = ["lexer"]
semantic_analysis = ["parser"]
tacky = ["semantic_analysis"]
codegen = ["tacky"]
emission = ["codegen"]
full = ["emission"]
