[package]
name = "nlcc"
version = "0.13.5"
edition = "2021"
license = "MIT"
categories = ["compilers"]
description = "Nameless C Compiler"
repository = "https://github.com/ccde177/nlcc"

[lib]
name = "nlcc"
path = "src/lib.rs"

[[bin]]
name = "nlcc"
path = "src/bin/driver/main.rs"

[features]
default = ["lexer"]
lexer = []
parser = ["lexer"]
semantic_analysis = ["parser"]
tacky = ["semantic_analysis"]
codegen = ["tacky"]
emission = ["codegen"]
full = ["emission"]
